src/objects/sked_Support_Plan__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Plans</relationshipLabel>
        <relationshipName>sked_Support_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Achieving_Score__c</fullName>
        <label>Achieving Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Achieving__c</fullName>
        <inlineHelpText>Being supported and guided in their learning and in the development of their skills, confidence and self-esteem at home, at school and in the community</inlineHelpText>
        <label>Achieving</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Active_SHANARRI__c</fullName>
        <inlineHelpText>Having opportunities to take part in activities such as play, recreation and sport which contribute to healthy growth and development both at home and in the community</inlineHelpText>
        <label>Active</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Active_Score__c</fullName>
        <label>Active Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Support Plans</relationshipLabel>
        <relationshipName>sked_Support_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_EHR_Care_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Care Plan</label>
        <referenceTo>HealthCloudGA__EhrCarePlan__c</referenceTo>
        <relationshipLabel>Support Plans</relationshipLabel>
        <relationshipName>sked_Support_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Healthy_Score__c</fullName>
        <label>Healthy Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Healthy__c</fullName>
        <inlineHelpText>Having the highest attainable standards of physical and mental health, access to suitable healthcare, and support in learning to make healthy and safe choices</inlineHelpText>
        <label>Healthy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_How_my_support_is_structured__c</fullName>
        <inlineHelpText>times/length of stay/staff ratio</inlineHelpText>
        <label>How my support is structured?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Included_Score__c</fullName>
        <label>Included Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Included__c</fullName>
        <inlineHelpText>Having help to overcome social, educational, physical and economic inequalities and being accepted as part of the community in which they live and learn</inlineHelpText>
        <label>Included</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support Plans</relationshipLabel>
        <relationshipName>Support_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Nurtured_Score__c</fullName>
        <label>Nurtured Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Nurtured__c</fullName>
        <inlineHelpText>Having a nurturing place to live, in a family setting with additional help if needed or, where this is not possible, in a suitable care setting</inlineHelpText>
        <label>Nurtured</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Respected_Score__c</fullName>
        <label>Respected Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Respected__c</fullName>
        <inlineHelpText>Having the opportunity, along with carers to be heard and involved in decisions which affect them</inlineHelpText>
        <label>Respected</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Responsible_Score__c</fullName>
        <label>Responsible Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Responsible__c</fullName>
        <inlineHelpText>Having opportunities and encouragement o play active and responsible roles in their schools and communities and where necessary, having appropriate guidance and supervision and being involved in decisions that affect them</inlineHelpText>
        <label>Responsible</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Safe_Score__c</fullName>
        <label>Safe Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Safe__c</fullName>
        <inlineHelpText>Protected from abuse, neglect or harm at home, at school and in the community</inlineHelpText>
        <label>Safe</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan_Synopsis__c</fullName>
        <label>Support Plan Synopsis</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Support Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sked_Account__c</columns>
        <columns>sked_Individual__c</columns>
        <columns>sked_Active__c</columns>
        <columns>sked_Case__c</columns>
        <columns>sked_End__c</columns>
        <columns>sked_Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>sked_EHR_Care_Plan__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Support Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Plans</pluralLabel>
    <recordTypes>
        <fullName>Adult</fullName>
        <active>true</active>
        <description>Used when defining an Adult Care Plan</description>
        <label>Adult</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child</fullName>
        <active>true</active>
        <description>Used for Child Support Plans - also enables SHANARRI</description>
        <label>Child</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>